--- a/src/components/cases/style.css
+++ b/src/components/cases/style.css
@@ -11,6 +11,16 @@
     height: calc(100%) !important;
 } */
 
+.input-table input:focus{
+    border-bottom: none !important;
+    box-shadow: none !important;
+  }
+.input-table   input{
+    border-bottom: none !important;
+    box-shadow: none !important;
+  }
+
+
 .element {
     -moz-transition: all 0.5s ease-in;
     -o-transition: all 0.5s ease-in;
