--- a/src/App.css
+++ b/src/App.css
@@ -149,7 +149,7 @@ text-decoration: none !important;
       margin: 10px;
 }
 
-#modalAddCase, #modalAddCaseCustomer , #modalCreate, #modalSummary , #modalAddF2 { 
+#modalAddCase, #modalAddCaseCustomer , #modalCreate, #modalSummary , #modalAddF2 ,#modalAddContract { 
   width: 95% !important;
 } 
 
