--- a/src/App.css
+++ b/src/App.css
@@ -154,7 +154,7 @@ text-decoration: none !important;
 } 
 
 #modalDetail , #modalRead{
-      width: 70% !important;
+      width: 50em !important;
 }
 
 
