--- a/src/components/cases/style.css
+++ b/src/components/cases/style.css
@@ -17,6 +17,22 @@
     height: 30%!important;
 }
 
+#modalDelete{
+    top:20%!important;
+    height:30em!important;
+    width:45em!important;
+}
+
+#modalEdit{
+    top:20%!important;
+    height:40em!important;
+}
+
+#modalRead{
+    top:20%!important;
+    height:40em!important;
+}
+
 .tabslist{
     font-size: large;
 }
