--- a/src/components/cases/style.css
+++ b/src/components/cases/style.css
@@ -17,10 +17,17 @@
     height: 50%!important;
 }
 
-#modalAddOfficer{
+#modalAddOfficer , #modalAddMargin{
     top:20%!important;
     height: 40%!important;
 }
+
+
+#modalAddFStaff{
+    top:20%!important;
+    height: 40%!important;
+}
+
 
 #modalDelete{
     top:20%!important;
