--- a/src/components/table.css
+++ b/src/components/table.css
@@ -126,6 +126,14 @@ td .png-icon{
 .no-col-padding{
     padding-left: 0px !important;
 }
+
+.no-col-padding-both{
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+}
+.no-col-margin{
+    margin-bottom: 0px !important;
+}
 .content input, .content select{
     border: 1px solid #0000006b !important;
     background-color: #FFFFFF !important;
