--- a/src/components/cases/style.css
+++ b/src/components/cases/style.css
@@ -21,7 +21,11 @@
     top:20%!important;
     height: 40%!important;
 }
-
+#modalProcess {
+    top:20%!important;
+    height:25em!important;
+    width:45em!important;
+}
 
 #modalAddFStaff{
     top:20%!important;
