--- a/src/components/cases/style.css
+++ b/src/components/cases/style.css
@@ -1,7 +1,7 @@
 #modalFastTrack{
-    top:20%!important;
-    height:40em!important;
-    width:45em!important;
+    top:10em!important;
+    height:50em!important;
+    width:55em!important;
 }
 #modalCancel{
     top:20%!important;
@@ -48,7 +48,10 @@
     top:20%!important;
     height:40em!important;
 }
-
+.f2info td,.f2info th{
+    padding:0px;
+    padding-left: 5px;
+}
 .tabslist{
     font-size: large;
 }
