--- a/src/components/table.css
+++ b/src/components/table.css
@@ -109,10 +109,12 @@ td .png-icon{
     background-color:transparent !important;
     height:2rem !important;
 }
-
+.summaryIcon-div label{
+    font-size: 15px !important;
+}
 .content-radonly label{
     color: #3B4A8A !important;
-    font-size: 20px !important;
+    font-size: 16px !important;
     
 }
 
