mycase + alert fix

--- a/src/components/layout/style.css
+++ b/src/components/layout/style.css
@@ -16,4 +16,9 @@
     top:auto !important ;
     height: 100% !important;
 }
-
+.hidden{
+    visibility: hidden;
+}
+.subpadding{
+    padding-left: 55px !important;
+}
